# pve-xtermjs

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README  defines.mk  xterm-3.10.1.tgz  xterm-3.12.0.tgz  xterm-3.2.0.tgz
debian/: changelog  control  copyright  debcargo.toml  install  rules
debian/source/: lintian-overrides
src/: Makefile  main.rs
src/PVE/: Makefile
src/PVE/CLI/: Makefile  termproxy.pm
src/www/: Makefile  index.html.hbs.in  index.html.tpl.in  main.js  util.js  xterm-addon-webgl.js.map  xterm.js  xterm.js.map
termproxy/: Cargo.toml  Makefile
termproxy/debian/: changelog  control  copyright  links  rules
termproxy/src/: cli.rs  main.rs  pty.rs
xterm.js/: Makefile
xterm.js/debian/: changelog  control  copyright  install  rules
xterm.js/debian/source/: lintian-overrides
xterm.js/src/: addon-webgl.js.map  addon-webgl.mjs.map  index.html.hbs.in  index.html.tpl.in  main.js  style.css  util.js  xterm.mjs.map
