[package]
name = "termproxy"
version = "4.16.0"
authors = [
    "Dominik Csapak <d.csapak@proxmox.com>",
    "for xterm.js parts: The xterm.js authors <https://github.com/xtermjs/xterm.js>",
]
edition = "2018"
license = "AGPL-3"

exclude = [ "build", "debian" ]

[dependencies]
anyhow = "1"
mio = { version = "0.7", features = [ "net", "os-ext" ] }
curl = "0.4"
clap = "2.33"
proxmox-io = "1"
proxmox-sys = "0.2"
