[package]
name = "termproxy"
version = "4.16.0"
authors = [
    "Dominik Csapak <d.csapak@proxmox.com>",
    "for xterm.js parts: The xterm.js authors <https://github.com/xtermjs/xterm.js>",
]
edition = "2018"
license = "AGPL-3"

exclude = [ "build", "debian" ]

[dependencies]
anyhow = "1"
mio = { version = "0.8", features = [ "net", "os-ext" ] }
ureq = { version = "2.4", default-features = false, features = [ "gzip" ] }
clap = "3"
proxmox-io = "1"
proxmox-lang = "1.1"
proxmox-sys = "0.4"
