[package]
name = "termproxy"
description = "Execute a terminal command and proxy I/O via network"
version = "4.16.0"
authors = [
    "Proxmox Support Team <support@proxmox.com>",
    "for xterm.js parts: The xterm.js authors <https://github.com/xtermjs/xterm.js>",
]
edition = "2018"
license = "AGPL-3"

exclude = [ "build", "debian" ]

[dependencies]
anyhow = "1"
mio = { version = "0.8", features = [ "net", "os-ext" ] }
ureq = { version = "2.4", default-features = false, features = [ "gzip" ] }
clap = "3"
proxmox-io = "1"
proxmox-lang = "1.1"
proxmox-sys = "0.5"
