[package]
name = "proxmox-termproxy"
description = "Execute a terminal command and proxy I/O via network"
version = "1.0.0"
authors = [
    "Proxmox Support Team <support@proxmox.com>",
    "for xterm.js parts: The xterm.js authors <https://github.com/xtermjs/xterm.js>",
]
edition = "2021"
license = "AGPL-3"

exclude = [ "build", "debian" ]

[profile.release]
lto = true

[dependencies]
anyhow = "1"
mio = { version = "0.8", features = [ "net", "os-ext" ] }
ureq = { version = "2.4", default-features = false, features = [ "gzip" ] }
pico-args = "0.4"
proxmox-io = "1"
proxmox-lang = "1.1"
proxmox-sys = "0.5"
