[package]
name = "proxmox-termproxy"
description = "Execute a terminal command and proxy I/O via network"
version = "2.0.2"
authors = [
    "Proxmox Support Team <support@proxmox.com>",
    "for xterm.js parts: The xterm.js authors <https://github.com/xtermjs/xterm.js>",
]
edition = "2024"
license = "AGPL-3"

exclude = [ "build", "debian" ]

[profile.release]
lto = true

[dependencies]
anyhow = "1"
libc = "0.2.107"
mio = { version = "1", features = [ "net", "os-ext" ] }
nix = { version = "0.29", features = ["fs", "ioctl", "process", "term"] }
pico-args = "0.5"
proxmox-io = "1"
form_urlencoded = "1.2"
